[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Game Of Squids.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://characters/common/code/damageDisplayNum.gd" type="Script" id=2]

[sub_resource type="QuadMesh" id=11]
size = Vector2( 0.1, 0.1 )

[sub_resource type="ViewportTexture" id=10]
flags = 1
viewport_path = NodePath("damageDisplayNum/damageDisplayView")

[sub_resource type="SpatialMaterial" id=12]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
albedo_texture = SubResource( 10 )

[sub_resource type="DynamicFont" id=13]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="BoxShape" id=14]
extents = Vector3( 0.05, 0.05, 0.05 )

[node name="damageDisplay" type="RigidBody"]
custom_integrator = true
script = ExtResource( 2 )

[node name="damageDisplayNum" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="damageDisplayView" type="Viewport" parent="damageDisplayNum"]
size = Vector2( 265, 265 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 1

[node name="damageText" type="Label" parent="damageDisplayNum/damageDisplayView"]
margin_right = 256.0
margin_bottom = 256.0
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "102"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 14 )

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]
